--- a/EHNABFApp/app/build.gradle
+++ b/EHNABFApp/app/build.gradle
@@ -13,11 +13,11 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            debuggable true
+            debuggable false
         }
     }
 }
